syntax = "proto3";

option go_package = "github.com/openware/state-channels/app/internal/proto";

service StateProposalService {
  // Public
  rpc SetFinal(StateProposalRequest) returns (EmptyProposalResponse);
  // Public
  rpc PendingLiability(LiabilityRequest) returns (EmptyProposalResponse);
  // Public
  rpc ExecutedLiability(LiabilityRequest) returns (EmptyProposalResponse);
  // Public
  rpc RevertLiability(LiabilityRequest) returns (EmptyProposalResponse);
  // Public
  rpc ApproveLiabilities(StateProposalRequest) returns (EmptyProposalResponse);
}

message LiabilityRequest {
  uint64 from = 1;
  uint64 to = 2;
  string asset = 3;
  string amount = 4;
  bytes state_proposal = 5;
}

message StateProposalRequest {
  bytes state_proposal = 1;
}

message EmptyProposalResponse {
}
